Bug 152575 - Comments in margin missing depending on combination of settings in Print and PDF export dialogs (see comment 14)
Summary: Comments in margin missing depending on combination of settings in Print and ...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Printing and PDF export (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha1+
Hardware: All All
: medium normal
Assignee: Samuel Mehrbrodt
URL:
Whiteboard: target:24.2.0 target:7.6.0.0.beta2 ta...
Keywords: implementationError
: 153716 (view as bug list)
Depends on:
Blocks: Print-Dialog Writer-Comments PDF-Export-Options-Dialog 77650
  Show dependency treegraph
 
Reported: 2022-12-18 10:53 UTC by devseppala
Modified: 2023-07-12 07:16 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
PDF-export (7.5 beta1) prints comments only to the margin of the first page (49.59 KB, application/vnd.oasis.opendocument.text)
2022-12-18 10:53 UTC, devseppala
Details

Note You need to log in before you can comment on or make changes to this bug.
Description devseppala 2022-12-18 10:53:20 UTC
Created attachment 184219 [details]
PDF-export (7.5 beta1) prints comments only to the margin of the first page

In the version 7.5.0.0.alpha1+, PDF Export gained a new option to print the comments to the margin of the printed pages, as is with the regular printing feature. In the folloging release 7.5.0.0.beta1, this option will print comments only on the first page of the document, rest of the pages are printed normally without comments. Addtionally, in the version 7.6.0.0.alpha0+, comments are apparently printed to all of the pages. See more information in the original bug report, bug 77650.
Comment 1 BogdanB 2022-12-18 11:27:16 UTC
Confirm with
Version: 7.5.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: ad085990b8073a122ac5222e5220f8f1d6826dcf
CPU threads: 16; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 2 devseppala 2022-12-19 13:58:47 UTC
I thought that 7.5.0.0.alpha1+ was unaffected by this bug. So to sum up things:

Affected:
7.5.0.0.alpha1+
7.5.0.0.beta1

Not affected:
7.6.0.0.alpha0+
Comment 3 BogdanB 2022-12-19 14:31:32 UTC
7.6alpha0+ is also affected

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: ad387d5b984c6666906505d25685065f710ed55d
CPU threads: 16; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 4 devseppala 2022-12-19 14:43:42 UTC
(In reply to BogdanB from comment #3)
> 7.6alpha0+ is also affected

Strange, in the comments of bug 77650, stragu commented:

>I couldn't see that issue in:
>Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Comment 5 BogdanB 2022-12-19 14:58:57 UTC Comment hidden (obsolete)
Comment 6 BogdanB 2022-12-19 15:02:19 UTC Comment hidden (obsolete)
Comment 7 BogdanB 2022-12-19 15:03:09 UTC Comment hidden (obsolete)
Comment 8 devseppala 2022-12-29 14:00:48 UTC
I retested the following:

LibreOfficeDev_7.5.0.0.alpha1_Win_x86-64
   Does not have the feature implemented eyet.

LibreOfficeDev_7.5.0.0.beta1_Win_x86-64.msi
   First implementation build of this feature and comments are printed only to the margin of the first page

LibreOffice_7.5.0.1_Win_x86-64.msi (RC1?)
   comments are printed only to the margin of the first page


However, I have not and can't test 7.6.0.0.alpha0+, because I don't know where to download it. I have only tested versions available on the pre-releases server. I only mentioned 7.6.0.0.alpha0+ because stragu commented it on bug 77650.
Comment 9 BogdanB 2022-12-29 14:15:05 UTC
(In reply to devseppala from comment #8)
> I retested the following:
> 
> LibreOfficeDev_7.5.0.0.alpha1_Win_x86-64
>    Does not have the feature implemented eyet.
> 
> LibreOfficeDev_7.5.0.0.beta1_Win_x86-64.msi
>    First implementation build of this feature and comments are printed only
> to the margin of the first page
> 
> LibreOffice_7.5.0.1_Win_x86-64.msi (RC1?)
>    comments are printed only to the margin of the first page
> 
> 
> However, I have not and can't test 7.6.0.0.alpha0+, because I don't know
> where to download it. I have only tested versions available on the
> pre-releases server. I only mentioned 7.6.0.0.alpha0+ because stragu
> commented it on bug 77650.

Here you can find development versions everyday and choose what is wright for youȘ Mac/Linux/Windows
https://dev-builds.libreoffice.org/daily/master/
Comment 10 devseppala 2022-12-29 14:35:30 UTC
Now I tested 7.6.0.0.alpha0+ (2022-Dec-28) and this version prints comments only to the margin of the first page.

So for me, none of the versions work corretly.
Comment 11 BogdanB 2022-12-29 15:34:52 UTC Comment hidden (obsolete)
Comment 12 devseppala 2022-12-29 16:12:53 UTC
@BogdanB, the procedure you are describing is for regular printing (or for using third party PDF printing software). This bug report is about the LibreOffice native PDF export 
File->Export As->Export as PDF

The regular comment printing to margins works fine, it is the PDF Export that is the problem.
Comment 13 BogdanB 2022-12-29 21:02:46 UTC
Sorry for noise, I remove all my wrong comments.

Not working with
Version: 7.5.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: ad085990b8073a122ac5222e5220f8f1d6826dcf
CPU threads: 16; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded

Neither with
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: ad387d5b984c6666906505d25685065f710ed55d
CPU threads: 16; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 14 stragu 2023-02-20 10:41:10 UTC
I just had a closer look:

In my tests, it looks like there is some interference between the PDF export settings and the Print to File settings, with different results depending on the combination of settings and PDF export route. There actually is no difference between 7.5 and 7.6. Reported differences between these two versions are probably due to different combination of settings used in tests.

How to turn on the option in the dialogs:

- Turning it on for *printing* is in: "File > Print... > LibreOffice Writer > Contents > Comments: Place in margins", then using the "Print to file" printer.
- Turning it on for *PDF export* is in: "File > Export as > Export as PDF... > General > Structure > Comment in margin"

5 cases tested, of which 2 have bad results:

A. Off for Print, on for PDF, then Export as PDF: only first page's comments are included -> BAD
B. Off for PDF, on for Print, then Print to file: all comments included -> GOOD
C. Both turned on, export however you want: all comments included -> GOOD
D. On for Print, off for PDF, then export as PDF: first page's comments missing -> BAD
E. On for PDF, off for Print, then Print to file: no comments in margin -> GOOD

Tested in:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: b52117c0be97c45824d2897657084f8ac7e9bf42
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Version: 7.5.0.3 (X86_64) / LibreOffice Community
Build ID: c21113d003cd3efa8c53188764377a8272d9d6de
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

The print settings influencing the PDF export were already an issue in 7.4, but at least all the comments were exported. The issue with only *some* of the comments being exported was introduced in 7.5, when the option for comments in margin was introduced for the PDF dialog (fix for bug 77650).

Samuel, could you please have a look at how these two dialogs interact in unexpected ways?
Comment 15 stragu 2023-02-20 10:47:46 UTC
*** Bug 153716 has been marked as a duplicate of this bug. ***
Comment 16 stragu 2023-02-20 10:57:20 UTC
I have not extensively tested what effect the settings in "Tools > Options > Writer > Print > Comments" have, but they would also need to be checked for any interaction weirdness. So far, I see that changing this setting does not sync with the Print dialog.
Comment 17 Commit Notification 2023-07-03 11:36:11 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3fc6a189933440ac318074a10d9612a7f04df048

tdf#152575 Fix missing comment export in some cases

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 18 Commit Notification 2023-07-03 20:37:27 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/4f942ff328463b4ecc7ed7350f7653c8d2e103c4

tdf#152575 Fix missing comment export in some cases

It will be available in 7.6.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 19 Commit Notification 2023-07-03 20:38:30 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/4ed443d78864b8f2c215d47bd9cfc6ccf8a099fb

tdf#152575 Fix missing comment export in some cases

It will be available in 7.5.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 20 stragu 2023-07-05 14:10:17 UTC
I just tested the fix with:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: d74344f6cae0cf1c12f08249c8f49be1374fb98f
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Using the same cases as in comment 14, with following results:

A. Off for Print, on for PDF, then Export as PDF: all comments included -> GOOD
B. Off for PDF, on for Print, then Print to file: all comments included -> GOOD
C. Both turned on, export however you want: all comments included -> GOOD
D. On for Print, off for PDF, then export as PDF: no comments -> GOOD
E. On for PDF, off for Print, then Print to file: no comments -> GOOD

Looking good, thank you very much for the fix, Samuel! :)
Comment 21 Commit Notification 2023-07-12 07:16:19 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "libreoffice-7-5-5":

https://git.libreoffice.org/core/commit/aaaabb8e96336ef7191408ee9d7fca9195e17055

tdf#152575 Fix missing comment export in some cases

It will be available in 7.5.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.