tdf#152575 Fix missing comment export in some cases

Comments in margin were not exported to PDF when there was no comment
on the first page.

Change-Id: I102834d6e39b0cf471e4b28f7f6b112ad52c54a9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153870
Tested-by: Jenkins
Reviewed-by: Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>
(cherry picked from commit c8a553388683f12e92d3c30c9d7a29a47ee12c2c)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153900
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>